<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>xelan</artifactId>
	<version>0.1.0</version>
	<packaging>jar</packaging>
	<name>xelan</name>
	<description/>
	<dependencies/>
	<distributionManagement>
	   <repository>
	     <id>github</id>
	     <name>GitHub Teletha Apache Maven Packages</name>
	     <url>https://maven.pkg.github.com/Teletha/maven-repository</url>
	   </repository>
	</distributionManagement>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerId>eclipse</compilerId>
					<source>15</source>
					<target>15</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-proc:none</arg>
					</compilerArgs>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-eclipse</artifactId>
						<version>2.8.8</version>
					</dependency>
					<dependency>
						<groupId>org.eclipse.jdt</groupId>
						<artifactId>ecj</artifactId>
						<version>3.25.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
